Kártyák és óra hozzáadva az oldalhoz.

--- a/Ciprus.html
+++ b/Ciprus.html
@@ -2,11 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ciprusi Köztársaság</title>
     <link rel="stylesheet" href="style.css">
+    <script src="ora.js"></script>
 </head>
-<body>
+<body onload="startTime()">
+<div class="header">
+        <div class="inner_header">
+          <div class="logo_container">
+            <img src="cimer1.png">
+          </div>
+            <p id="ora"></p>
+        </div>
+    </div>   
+      <section id="cyprus">
+        <div class="container">
+            <div class="cim">
+                <p>Ciprusi köztársaság</p>
+
+              </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card text-center">
+                <img src="domborzat.png" class="card-img-top" alt="Ciprus szigetének címere" title="Ciprus szigetének címere">
+                <div class="card-body">
+                  <h5 class="card-title">Földrajzi elhelyezkedése</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card text-center">
+                <img src="cypruszaszlo.png" class="card-img-top" alt="Ciprus zászlaja" title="Ciprus zászlaja">
+                <div class="card-body">
+                  <h5 class="card-title">Éghajlata</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card text-center">
+                <img src="kultura.jpg" class="card-img-top" alt="Kultúra" title="Kultúra">
+                <div class="card-body">
+                  <h5 class="card-title">Kultúrája</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    
     <h1>Ciprusi Köztársaság</h1>
     <h2>Földrajza</h2>
     <h3>Domborzata</h3><p>
