Formázások, képek kicserélése

--- a/Ciprus.html
+++ b/Ciprus.html
@@ -12,7 +12,7 @@
 <div class="header">
         <div class="inner_header">
           <div class="logo_container">
-            <img src="cimer1.png">
+            <img id="zaszlo" src="cipruszászló.jpg">
           </div>
             <p id="ora"></p>
         </div>
@@ -26,7 +26,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card text-center">
-                <img src="domborzat.png" class="card-img-top" alt="Ciprus szigetének címere" title="Ciprus szigetének címere">
+                <img src="domborzat.png" class="card-img-top" alt="Ciprus domborzati képe" title="Ciprus domborzati képe">
                 <div class="card-body">
                   <h5 class="card-title">Földrajzi elhelyezkedése</h5>
                 </div>
@@ -34,9 +34,9 @@
             </div>
             <div class="col-md-4">
               <div class="card text-center">
-                <img src="cypruszaszlo.png" class="card-img-top" alt="Ciprus zászlaja" title="Ciprus zászlaja">
+                <img id="teknos" src="teknos.jpg" class="card-img-top" alt="Teknős" title="Teknős">
                 <div class="card-body">
-                  <h5 class="card-title">Éghajlata</h5>
+                  <h5 class="card-title">Élővilága</h5>
                 </div>
               </div>
             </div>
