A képekhez title és alt hozzáadva

--- a/Ciprus.html
+++ b/Ciprus.html
@@ -12,7 +12,7 @@
 <div class="header">
         <div class="inner_header">
           <div class="logo_container">
-            <img id="zaszlo" src="cipruszászló.jpg">
+            <img id="zaszlo" src="cipruszászló.jpg" alt="Ciprus zászlaja" title="Ciprus zászlaja">
           </div>
             <p id="ora"></p>
         </div>
@@ -65,17 +65,17 @@
     <hr>
     <h3>Vízrajz</h3><p>
     Jelentős folyóval nem rendelkezik, gyakori a vízhiány. Leghosszabb a Pedieosz nevű, 96 km hosszú folyó.
-    <img src="ciprus.gif" alt="ciprus" id="ciprus" height="214" width="420">
+    <img src="ciprus.gif" alt="ciprus" id="ciprus" height="214" width="420" title="ciprus">
 A téli időszakban hulló jelentősebb mennyiségű csapadék az ország belső területein található hegyekből széles medreken keresztül jut el a tengerbe. Ezek a természetes medrek a nyári időszakban szárazon állnak. Az esőzésekből származó vizet a szigeten igyekeznek tározókba terelni, hogy a száraz időszakokban ezek segítségével csökkentsék a vízhiányt.Jelentős folyóval nem rendelkezik, gyakori a vízhiány. Leghosszabb a Pedieosz nevű, 96 km hosszú folyó.</p>
 <br>
 <hr>
 <h3>Éghajlat</h3><p>
-<img src="ciprus-homerseklet.jpg" alt="ciprus-homerseklet" id="ciprusi-homerseklet" width="439" height="149">
+<img src="ciprus-homerseklet.jpg" alt="ciprus-homerseklet" id="ciprusi-homerseklet" width="439" height="149" title="ciprusi-homerseklet">
 Cipruson az éghajlat jellegzetesen mediterrán: meglehetősen meleg és száraz, csapadék főleg november és március között, olykor villámlással, mennydörgéssel kísért zivatarok formájában esik. Havazás csak a hegyekben fordul elő, a tengerparti övezetben szinte sosem fagy. Az enyhe tél általában március-áprilisban gyorsan csap át a nyárba. A Tróodoszon a magasabb területeken az éghajlat kontinentális.</p>
 <hr>
 
 <h3>Élővilág, természetvédelem</h3><p>
-    <img src="flamingo.jpg" alt="flamingo" id="flamingo" >
+    <img src="flamingo.jpg" alt="flamingo" id="flamingo" title="flamingo">
 Az alacsonyabb fekvésű vidékeken olajfa, szentjánoskenyérfa, tamariszkusz, eukaliptusz, ciprusfa és akácfa nő. A hegyek jellemző fái az aleppóifenyő, magyaltölgy és nyárfa, illetve a Tróodosz-hegység nyugati részén a cédrusfa. A hegycsúcsok közelében boróka és feketefenyő él. Tavasszal a következő virágok teszik színessé a szigetet: királyné gyertyája, szuhar, jácint, nárcisz, ciklámen, bazsarózsa, pipacs, leander, rekettye.
 
 A sziget legnevezetesebb állatai a Larnakai- és Akrotiri-sóstónál telelő flamingók. A Tróodosz-hegységben őshonos a ciprusi vadjuh. A hegyekben kis számban található barátkeselyű, ölyv, karvaly, vándorsólyom és vörös vércse. Szintén a Tróodosz-hegység területén él a sziget egyetlen mérgeskígyó faja a Levantei vipera.
