Footer hozzáadva, kisebb változtatások

--- a/Ciprus.html
+++ b/Ciprus.html
@@ -15,6 +15,7 @@
             <img id="zaszlo" src="cipruszászló.jpg" alt="Ciprus zászlaja" title="Ciprus zászlaja">
           </div>
             <p id="ora"></p>
+            <p id="orafelett">Jelenlegi idő:</p>
         </div>
     </div>   
       <section id="cyprus">
@@ -28,7 +29,7 @@
               <div class="card text-center">
                 <img src="domborzat.png" class="card-img-top" alt="Ciprus domborzati képe" title="Ciprus domborzati képe">
                 <div class="card-body">
-                  <h5 class="card-title">Földrajzi elhelyezkedése</h5>
+                  <h5 class="card-title"><a href="#foldrajz">Földrajza</a></h5>
                 </div>
               </div>
             </div>
@@ -36,7 +37,7 @@
               <div class="card text-center">
                 <img id="teknos" src="teknos.jpg" class="card-img-top" alt="Teknős" title="Teknős">
                 <div class="card-body">
-                  <h5 class="card-title">Élővilága</h5>
+                  <h5 class="card-title"><a href="#elovilag">Élővilága</a></h5>
                 </div>
               </div>
             </div>
@@ -44,7 +45,7 @@
               <div class="card text-center">
                 <img src="kultura.jpg" class="card-img-top" alt="Kultúra" title="Kultúra">
                 <div class="card-body">
-                  <h5 class="card-title">Kultúrája</h5>
+                  <h5 class="card-title"><a href="#kultura">Kultúrája</a></h5>
                 </div>
               </div>
             </div>
@@ -52,8 +53,7 @@
         </div>
       </section>
     
-    <h1>Ciprusi Köztársaság</h1>
-    <h2>Földrajza</h2>
+    <h1><a name="foldrajz">Földrajza</a></h1>
     <h3>Domborzata</h3><p>
     Ciprus Szicília és Szardínia után a Földközi-tenger legnagyobb szigete. <br>Észak-déli irányban négy tájra osztható:
     <ul>
@@ -65,17 +65,17 @@
     <hr>
     <h3>Vízrajz</h3><p>
     Jelentős folyóval nem rendelkezik, gyakori a vízhiány. Leghosszabb a Pedieosz nevű, 96 km hosszú folyó.
-    <img src="ciprus.gif" alt="ciprus" id="ciprus" height="214" width="420" title="ciprus">
+    <img src="ciprus.gif" alt="ciprus" id="ciprus" height="214" width="420" title="ciprus" class="kep">
 A téli időszakban hulló jelentősebb mennyiségű csapadék az ország belső területein található hegyekből széles medreken keresztül jut el a tengerbe. Ezek a természetes medrek a nyári időszakban szárazon állnak. Az esőzésekből származó vizet a szigeten igyekeznek tározókba terelni, hogy a száraz időszakokban ezek segítségével csökkentsék a vízhiányt.Jelentős folyóval nem rendelkezik, gyakori a vízhiány. Leghosszabb a Pedieosz nevű, 96 km hosszú folyó.</p>
 <br>
 <hr>
 <h3>Éghajlat</h3><p>
-<img src="ciprus-homerseklet.jpg" alt="ciprus-homerseklet" id="ciprusi-homerseklet" width="439" height="149" title="ciprusi-homerseklet">
+<img src="ciprus-homerseklet.jpg" alt="ciprus-homerseklet" id="ciprusi-homerseklet" width="439" height="149" title="ciprusi-homerseklet" class="kep">
 Cipruson az éghajlat jellegzetesen mediterrán: meglehetősen meleg és száraz, csapadék főleg november és március között, olykor villámlással, mennydörgéssel kísért zivatarok formájában esik. Havazás csak a hegyekben fordul elő, a tengerparti övezetben szinte sosem fagy. Az enyhe tél általában március-áprilisban gyorsan csap át a nyárba. A Tróodoszon a magasabb területeken az éghajlat kontinentális.</p>
 <hr>
 
-<h3>Élővilág, természetvédelem</h3><p>
-    <img src="flamingo.jpg" alt="flamingo" id="flamingo" title="flamingo">
+<h3><a name="elovilag">Élővilág, természetvédelem</a></h3><p>
+    <img src="flamingo.jpg" alt="flamingo" id="flamingo" title="flamingo" class="kep">
 Az alacsonyabb fekvésű vidékeken olajfa, szentjánoskenyérfa, tamariszkusz, eukaliptusz, ciprusfa és akácfa nő. A hegyek jellemző fái az aleppóifenyő, magyaltölgy és nyárfa, illetve a Tróodosz-hegység nyugati részén a cédrusfa. A hegycsúcsok közelében boróka és feketefenyő él. Tavasszal a következő virágok teszik színessé a szigetet: királyné gyertyája, szuhar, jácint, nárcisz, ciklámen, bazsarózsa, pipacs, leander, rekettye.
 
 A sziget legnevezetesebb állatai a Larnakai- és Akrotiri-sóstónál telelő flamingók. A Tróodosz-hegységben őshonos a ciprusi vadjuh. A hegyekben kis számban található barátkeselyű, ölyv, karvaly, vándorsólyom és vörös vércse. Szintén a Tróodosz-hegység területén él a sziget egyetlen mérgeskígyó faja a Levantei vipera.
@@ -96,7 +96,10 @@ Ciprus az európai madárvonulás egyik fő útvonalára esik. Madarak milliói 
 <li>Lara-Toxeftra Tengeri Rezervátum</li>
 </ul>
 <hr>
-<h2>Kultúrája</h2>
+<h2><a name="kultura">Kultúrája</a></h2>
 <p>A szigetország kulturális szempontból két egymástól viszonylag határozottan elkülönülő részre osztható: a görög és török ciprióták egyaránt őrzik kulturális hagyományukat, amely szorosan összefonódik Görögország és Törökország kulturális hagyományaival és életével. A két közösség közötti kulturális kölcsönhatás gyenge. A sziget görög kultúrájának gyökerei az ókori görög hagyományig nyúlnak vissza, a török ciprióta kultúra pedig az 1570-es ottomán megszállástól számítható. A szigetország vezetői sem az ottomán korszakban, sem a brit fennhatóság idején nem tettek semmit annak érdekében, hogy a két hagyomány közeledjen egymáshoz, így egységes ciprusi kulturális hagyomány nem alakult ki.</p>
+<div class="footer">
+  &copy; Komplex Programozás | Gönczi Roland, Szabó Dávid, Balogh Tamás Arnold
+</div>
 </body>
 </html>
