--- a/Ciprus.html
+++ b/Ciprus.html
@@ -55,34 +55,34 @@
     
     <h1><a name="foldrajz">Földrajza</a></h1>
     <h3>Domborzata</h3><p>
-    Ciprus Szicília és Szardínia után a Földközi-tenger legnagyobb szigete. <br>Észak-déli irányban négy tájra osztható:
+    Ciprus <a href="https://hu.wikipedia.org/wiki/Szicília">Szicília</a> és <a href=2https://hu.wikipedia.org/wiki/Szardínia_(sziget)>Szardínia</a> után a Földközi-tenger legnagyobb szigete. <br>Észak-déli irányban négy tájra osztható:
     <ul>
-    <li>Kerínia-hegység: északon, a parttal párhuzamosan futó hegylánc</li>
-    <li>Tróodosz-hegység: a terület középső részén emelkedik, legmagasabb pontja: Ólimbosz 1953 m (egyben Ciprus legmagasabb pontja is).</li>
-    <li>Mezaoria-síkság: a két hegység között elterülő, és a déli parti síksággal összefüggő terület</li>
+    <li><a href="https://hu.wikipedia.org/wiki/Kerínia-hegység">Kerínia-hegység</a>: északon, a parttal párhuzamosan futó hegylánc</li>
+    <li><a href="https://hu.wikipedia.org/wiki/Tróodosz-hegység">Tróodosz-hegység</a>: a terület középső részén emelkedik, legmagasabb pontja: Ólimbosz 1953 m (egyben Ciprus legmagasabb pontja is).</li>
+    <li><a href="https://hu.wikipedia.org/wiki/Mezaoria-síkság">Mezaoria-síkság</a>: a két hegység között elterülő, és a déli parti síksággal összefüggő terület</li>
     <li>Partvidék</li>
     </ul></p>
     <hr>
     <h3>Vízrajz</h3><p>
-    Jelentős folyóval nem rendelkezik, gyakori a vízhiány. Leghosszabb a Pedieosz nevű, 96 km hosszú folyó.
+    Jelentős folyóval nem rendelkezik, <b>gyakori a vízhiány</b>. Leghosszabb a Pedieosz nevű, 96 km hosszú folyó.
     <img src="ciprus.gif" alt="ciprus" id="ciprus" height="214" width="420" title="ciprus" class="kep">
 A téli időszakban hulló jelentősebb mennyiségű csapadék az ország belső területein található hegyekből széles medreken keresztül jut el a tengerbe. Ezek a természetes medrek a nyári időszakban szárazon állnak. Az esőzésekből származó vizet a szigeten igyekeznek tározókba terelni, hogy a száraz időszakokban ezek segítségével csökkentsék a vízhiányt.Jelentős folyóval nem rendelkezik, gyakori a vízhiány. Leghosszabb a Pedieosz nevű, 96 km hosszú folyó.</p>
 <br>
 <hr>
 <h3>Éghajlat</h3><p>
 <img src="ciprus-homerseklet.jpg" alt="ciprus-homerseklet" id="ciprusi-homerseklet" width="439" height="149" title="ciprusi-homerseklet" class="kep">
-Cipruson az éghajlat jellegzetesen mediterrán: meglehetősen meleg és száraz, csapadék főleg november és március között, olykor villámlással, mennydörgéssel kísért zivatarok formájában esik. Havazás csak a hegyekben fordul elő, a tengerparti övezetben szinte sosem fagy. Az enyhe tél általában március-áprilisban gyorsan csap át a nyárba. A Tróodoszon a magasabb területeken az éghajlat kontinentális.</p>
+Cipruson <b>az éghajlat jellegzetesen mediterrán</b>: meglehetősen meleg és száraz, csapadék főleg november és március között, olykor villámlással, mennydörgéssel kísért zivatarok formájában esik. Havazás csak a hegyekben fordul elő, a tengerparti övezetben szinte sosem fagy. Az enyhe tél általában március-áprilisban gyorsan csap át a nyárba. A Tróodoszon a magasabb területeken az éghajlat kontinentális.</p>
 <hr>
 
 <h3><a name="elovilag">Élővilág, természetvédelem</a></h3><p>
     <img src="flamingo.jpg" alt="flamingo" id="flamingo" title="flamingo" class="kep">
 Az alacsonyabb fekvésű vidékeken olajfa, szentjánoskenyérfa, tamariszkusz, eukaliptusz, ciprusfa és akácfa nő. A hegyek jellemző fái az aleppóifenyő, magyaltölgy és nyárfa, illetve a Tróodosz-hegység nyugati részén a cédrusfa. A hegycsúcsok közelében boróka és feketefenyő él. Tavasszal a következő virágok teszik színessé a szigetet: királyné gyertyája, szuhar, jácint, nárcisz, ciklámen, bazsarózsa, pipacs, leander, rekettye.
 
-A sziget legnevezetesebb állatai a Larnakai- és Akrotiri-sóstónál telelő flamingók. A Tróodosz-hegységben őshonos a ciprusi vadjuh. A hegyekben kis számban található barátkeselyű, ölyv, karvaly, vándorsólyom és vörös vércse. Szintén a Tróodosz-hegység területén él a sziget egyetlen mérgeskígyó faja a Levantei vipera.
+A sziget legnevezetesebb állatai a Larnakai- és Akrotiri-sóstónál telelő flamingók. A Tróodosz-hegységben őshonos a <a href="https://hu.wikipedia.org/wiki/Ciprusi_vadjuh">ciprusi vadjuh</a>. A hegyekben kis számban található <a href="https://hu.wikipedia.org/wiki/Barátkeselyű">barátkeselyű</a>, <a href="https://hu.wikipedia.org/wiki/Ölyvformák">ölyv</a>, <a href="https://hu.wikipedia.org/wiki/Karvaly_(madár)">karvaly</a>, <a href="https://hu.wikipedia.org/wiki/Vándorsólyom">vándorsólyom</a> és <a href="https://hu.wikipedia.org/wiki/Vörös_vércse">vörös vércse</a>. Szintén a Tróodosz-hegység területén él a sziget egyetlen mérgeskígyó faja a Levantei vipera.
 
-Az embernek a szigeten történt megjelenésének idején, 9000-11 000 évvel ezelőtt még élt ott a ciprusi törpe víziló (Hippopotamus minor), amely akkoriban halt ki. Ez a faj az ún. Messinai sókrízis után szorult a szigetre, a Földközi-tenger kiszáradása, majd újra víz alá kerülése után csakúgy, mint fajrokonai Krétára, Máltára, Szicíliára.
+Az embernek a szigeten történt megjelenésének idején, 9000-11 000 évvel ezelőtt még élt ott a ciprusi törpe víziló (<a href="https://hu.wikipedia.org/wiki/Ciprusi_törpe_víziló">Hippopotamus minor</a>), amely akkoriban halt ki. Ez a faj az ún. Messinai sókrízis után szorult a szigetre, a Földközi-tenger kiszáradása, majd újra víz alá kerülése után csakúgy, mint fajrokonai Krétára, Máltára, Szicíliára.
 
-Ciprus az európai madárvonulás egyik fő útvonalára esik. Madarak milliói szállnak le a szigeten a vonulási időszakban. A nemzetközi természetvédelmi szervezetek erőfeszítései és a helyi hatóságok erősen korlátozott fellépése ellenére évente több millió énekesmadár esik áldozatul a lakosság körében elterjedt illegális vadászatnak. Lőfegyverek mellett hálókkal és lépvesszőkkel - a fagyöngy terméséből főzött ragacsos anyaggal bekent és a bokrok ágaira erősített pálcikákkal - ejtik zsákmányul a madarakat. E tevékenység célja részben puszta szórakozás, de a zsákmány nagy részét az "ambepoulia" nevű étel elkészítésére használják fel, amelyet elterjedten fogyasztanak. Az ambepoluiát megkopasztott és bepácolt majd megsütött énekesmadarakból készítik el. E fajok Európában (Cipruson is) védettek, elejtésük törvényellenes. Jelenleg Cipruson pusztítják el Európában a legtöbb védett madarat.</p><br>
+Ciprus az európai madárvonulás egyik fő útvonalára esik. Madarak milliói szállnak le a szigeten a vonulási időszakban. A nemzetközi természetvédelmi szervezetek erőfeszítései és a helyi hatóságok erősen korlátozott fellépése ellenére évente több millió énekesmadár esik áldozatul a lakosság körében elterjedt >b>illegális vadászat</b>nak. Lőfegyverek mellett hálókkal és lépvesszőkkel - a fagyöngy terméséből főzött ragacsos anyaggal bekent és a bokrok ágaira erősített pálcikákkal - <b>ejtik zsákmányul a madarakat</b>. E tevékenység célja részben puszta szórakozás, de a zsákmány nagy részét az "ambepoulia" nevű étel elkészítésére használják fel, amelyet elterjedten fogyasztanak. Az ambepoluiát megkopasztott és bepácolt majd megsütött énekesmadarakból készítik el. E fajok Európában (Cipruson is) védettek, elejtésük törvényellenes. Jelenleg Cipruson pusztítják el Európában a legtöbb védett madarat.</p><br>
 <hr>
 <h3>Nemzeti parkjai</h3>
 <ul>
