--- a/Ciprus.html
+++ b/Ciprus.html
@@ -54,7 +54,7 @@
       </section>
     
     <h1><a name="foldrajz">Földrajza</a></h1>
-    <h3>Domborzata</h3><p>
+    <h3>Domborzat</h3><p>
     Ciprus <a href="https://hu.wikipedia.org/wiki/Szicília">Szicília</a> és <a href=2https://hu.wikipedia.org/wiki/Szardínia_(sziget)>Szardínia</a> után a Földközi-tenger legnagyobb szigete. <br>Észak-déli irányban négy tájra osztható:
     <ul>
     <li><a href="https://hu.wikipedia.org/wiki/Kerínia-hegység">Kerínia-hegység</a>: északon, a parttal párhuzamosan futó hegylánc</li>
