szoveg div hozzáadva formázás céljából

--- a/Ciprus.html
+++ b/Ciprus.html
@@ -52,7 +52,7 @@
           </div>
         </div>
       </section>
-    
+    <div id="szoveg">
     <h1><a name="foldrajz">Földrajza</a></h1>
     <h3>Domborzat</h3><p>
     Ciprus <a href="https://hu.wikipedia.org/wiki/Szicília">Szicília</a> és <a href=2https://hu.wikipedia.org/wiki/Szardínia_(sziget)>Szardínia</a> után a Földközi-tenger legnagyobb szigete. <br>Észak-déli irányban négy tájra osztható:
@@ -98,6 +98,7 @@ Ciprus az európai madárvonulás egyik fő útvonalára esik. Madarak milliói 
 <hr>
 <h2><a name="kultura">Kultúrája</a></h2>
 <p>A szigetország kulturális szempontból két egymástól viszonylag határozottan elkülönülő részre osztható: a görög és török ciprióták egyaránt őrzik kulturális hagyományukat, amely szorosan összefonódik Görögország és Törökország kulturális hagyományaival és életével. A két közösség közötti kulturális kölcsönhatás gyenge. A sziget görög kultúrájának gyökerei az ókori görög hagyományig nyúlnak vissza, a török ciprióta kultúra pedig az 1570-es ottomán megszállástól számítható. A szigetország vezetői sem az ottomán korszakban, sem a brit fennhatóság idején nem tettek semmit annak érdekében, hogy a két hagyomány közeledjen egymáshoz, így egységes ciprusi kulturális hagyomány nem alakult ki.</p>
+    </div>
 <div class="footer">
   &copy; Komplex Programozás | Gönczi Roland, Szabó Dávid, Balogh Tamás Arnold
 </div>
